<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createFragHeading"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/id"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/firstName"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/lastName"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/emailId"
                android:inputType="textEmailAddress"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createImageUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/imageUrl"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/inputfieldbg"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputfieldbg"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/desiradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiosofteng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Software Engineer" />

            <RadioButton
                android:id="@+id/radiodesigner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Designer" />

            <RadioButton
                android:id="@+id/radioconsultant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Consultant" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/deptradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="IT" />

            <RadioButton
                android:id="@+id/radiofinance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Finance" />

            <RadioButton
                android:id="@+id/radiouiux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UI/UX" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/statusradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Active" />

            <RadioButton
                android:id="@+id/radioonboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Onboarding" />

            <RadioButton
                android:id="@+id/radioawait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Awaiting" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/positionradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiosenior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Senior" />

            <RadioButton
                android:id="@+id/radiojunior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Junior" />

            <RadioButton
                android:id="@+id/radionewbie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Newbie" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/bgradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="A+" />

            <RadioButton
                android:id="@+id/radiobve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="B+" />

            <RadioButton
                android:id="@+id/radioove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="O+" />
        </RadioGroup>

        <Button
            android:id="@+id/createEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:text="Create Employee" />
    </LinearLayout>


</ScrollView>